// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/Select Custom valueComponent 1`] = `
.c0 {
  padding: 12px;
}

.c7 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c6 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c15 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c15:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c15:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c15::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c15[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c5:hover {
  border: 1px solid #999;
}

.c5:focus {
  border: 1px solid #222;
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c17 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c17:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c17:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c17::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c17[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c16 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c16:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c16:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c16::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c16[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c12:hover {
  border: 1px solid #999;
}

.c12:focus {
  border: 1px solid #222;
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c14:hover {
  border: 1px solid #999;
}

.c14:focus {
  border: 1px solid #222;
}

.c14::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c13:hover {
  border: 1px solid #999;
}

.c13:focus {
  border: 1px solid #222;
}

.c13::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c9:hover,
.c9:focus {
  background-color: #eee;
}

.c10 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c8 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c12"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c13"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c14"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c15"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c15"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c16"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c17"
          disabled={true}
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          prefix={
            <ForwardRef
              offSet={10}
            >
              <MdKeyboardArrowDown />
            </ForwardRef>
          }
          type="text"
          value={null}
        />
        <div
          className="c6"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c7"
          >
            <div
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    data-test="list-item"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select default 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c8:hover,
.c8:focus {
  background-color: #eee;
}

.c9 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c7 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        disabled={true}
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value={null}
      />
      <div
        className="c5"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c6"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c7"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select onOutsideClick (dropdown) 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c8:hover,
.c8:focus {
  background-color: #eee;
}

.c9 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c7 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        disabled={true}
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Click on me or outside"
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value={null}
      />
      <div
        className="c5"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c6"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c7"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 30,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 30,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      click outside
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select useTriggerComponentWidth = false 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c8:hover,
.c8:focus {
  background-color: #eee;
}

.c9 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c3[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c7 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        disabled={true}
        onChange={[Function]}
        onClick={[Function]}
        placeholder="Choose option"
        prefix={
          <ForwardRef
            offSet={10}
          >
            <MdKeyboardArrowDown />
          </ForwardRef>
        }
        type="text"
        value={null}
      />
      <div
        className="c5"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c6"
        >
          <div
            onKeyDown={[Function]}
          >
            <div
              className="c7"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c8"
                  data-test="list-item"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c9"
                  >
                    <div
                      className="c10"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
